Some minor cleanup